--- a/01/index.html
+++ b/01/index.html
@@ -47,23 +47,41 @@
     <img id='cube' src='https://cs460.org/gfx/cube.png'>
 
     <h1>RO.ME "3 DREAMS OF BLACK"</h1>
+    <p>Connor Finnegan</p>
 
     <div class='demo'>
 
       <!-- TODO: REPLACE WITH A SCREENSHOT OF RO.ME -->
-      <img id='screenshot' src='https://placehold.co/300x300'>
+      <img id='screenshot' src='ROME.png'>
       <p id='description'>
       <!-- TODO: FILL IN YOUR DESCRIPTION -->
-      RO.ME is a very cool webgl demo!
+      RO.ME starts with a short film of someone falling asleep. Then it feels like a dream, where we travel through the dream
+      and visit certain stops. At one point it is a geometric building/ruinscape. Another aspect we are taken on a train, where 
+      we see buffalos running and they turn into demon like figures. It also showed a lot of birds following us, and giving us free will with
+      a free world desert where we could move on all axis for full free reign motion. It also had options to blur/pixelated a small circle
+      around where the mouse was. Seems like there was so underlying themes about nature and climate change, I could see it in the desert with
+      the floating city and how after a point I started creating a grass/flower trail. And mor eimprotantly it showed a standard for web design 
+      that is more advanced than anything at its time and how easy it could be and that was over a decade ago.
       </p>
       <p id='technology'>
-      Technology: TODO! <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
+      Technology:  <!-- TODO: FILL IN THE TECHNOLOGIES USED -->
+      The technology used for RO.ME is webgl. That is used to create the 3d scape as you travel through the different dreams. It also has a 
+      combination of different sounds and music as well as actual video that starts off the project before the person falls asleep. It uses
+      3d renders to render all the animals we see, the brids, deer, fish, and other animals we see. 
       </p>
       <p id='comparison'>
-      Comparison: TODO! <!-- TODO: FILL IN THE COMPARISON -->
+      Comparison:  <!-- TODO: FILL IN THE COMPARISON -->
+      Another webgl example <a href="https://mfisher-apollonas.com/">https://mfisher-apollonas.com/</a> called "The Quarry House" is a simialr
+      experience to RO.ME. Except now instead of a dream and geometric shapes and animals we are touring a house, wiht interactive objects when
+      if clicked give a description of the object, how much it cost and provides a picture of it. It uses the same technology except it is a different 
+      experience, givign emphasis on the stone used to create the objects and the house being built in a quarry with having an about section and gallery which acts more like a art gallery 
+      than a music video/walkthrough since you can go at your own pace.
       </p>
       <p id='ai'>
-      Significance (AI): TODO! <!-- TODO: SUMMARIZE THE AI OUTPUT -->
+      Significance (AI): <!-- TODO: SUMMARIZE THE AI OUTPUT -->
+        I asked chatgpt the phrase "why was RO.ME so important", to paraphrase: In 2011 when it was showcased it showed that it was possible to create
+        real time interactive 3d graphics in the web for the first time using webgl. It promoted a new standard for web graphics promoted by chrome.
+        It provided a new experience that a user could interact with the video, picture, and/or envirorment that was being created.
       </p>
 
       <div id='bonus'>
